changed prefix to C-a

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,10 @@ bind v split-window -v
 unbind '"'
 unbind %
 
+set -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
+
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
